editor/tree-sitter-zydeco/test/corpus/terms.txt
==================
Precedence and associativity
==================

A * B -> F x .observe / field

---

(source_file
  body: (function_type
    parameter: (product_type
      left: (variable
        name: (upper_identifier))
      right: (variable
        name: (upper_identifier)))
    result: (projection_expression
      value: (destructor_expression
        value: (application_expression
          function: (variable
            name: (upper_identifier))
          argument: (variable
            name: (lower_identifier)))
        destructor: (destructor_identifier))
      field: (lower_identifier))))

==================
Value functions, pipelines, and view patterns
==================

begin
  let imported = @(import("view.zy")) that
  let val keep (A : VType) (value : A) : A = value that
  let keep[Unit] ~> recovered = () that
  let forward = recovered |> keep Unit that
  let backward = keep Unit <| forward in backward
end

---

(source_file
  (block_expression
    (context_binding
      (binding_kind)
      (general_binding
        (variable_pattern
          (lower_identifier))
        (metadata_expression
          (metadata_sugar
            (meta_application
              (meta_identifier
                (lower_identifier))
              (meta_arguments
                (string_literal))))))
      (placement)
      (context_binding
        (binding_kind)
        (general_binding
          (value_modifier)
          (variable_pattern
            (lower_identifier))
          (copattern
            (parenthesized_pattern
              (pattern_annotation
                (variable_pattern
                  (upper_identifier))
                (variable
                  (upper_identifier))))
            (parenthesized_pattern
              (pattern_annotation
                (variable_pattern
                  (lower_identifier))
                (variable
                  (upper_identifier)))))
          (variable
            (upper_identifier))
          (variable
            (lower_identifier)))
        (placement)
        (context_binding
          (binding_kind)
          (general_binding
            (view_pattern
              (lower_identifier)
              (variable
                (upper_identifier))
              (variable_pattern
                (lower_identifier)))
            (parenthesized_term))
          (placement)
          (context_binding
            (binding_kind)
            (general_binding
              (variable_pattern
                (lower_identifier))
              (forward_pipeline_expression
                (variable
                  (lower_identifier))
                (application_expression
                  (variable
                    (lower_identifier))
                  (variable
                    (upper_identifier)))))
            (placement)
            (context_binding
              (binding_kind)
              (general_binding
                (variable_pattern
                  (lower_identifier))
                (backward_pipeline_expression
                  (application_expression
                    (variable
                      (lower_identifier))
                    (variable
                      (upper_identifier)))
                  (variable
                    (lower_identifier))))
              (placement)
              (variable
                (lower_identifier)))))))))

==================
Value parameters
==================

param val (value : Unit) in value

---

(source_file
  body: (parameter_expression
    value_function: (value_modifier)
    binder: (parenthesized_pattern
      (pattern_annotation
        pattern: (variable_pattern
          name: (lower_identifier))
        type: (variable
          name: (upper_identifier))))
    placement: (placement)
    body: (variable
      name: (lower_identifier))))

==================
Value abstraction
==================

val (A : VType) (value : A) => value

---

(source_file
  (value_lambda_expression
    (copattern
      (parenthesized_pattern
        (pattern_annotation
          (variable_pattern
            (upper_identifier))
          (variable
            (upper_identifier))))
      (parenthesized_pattern
        (pattern_annotation
          (variable_pattern
            (lower_identifier))
          (variable
            (upper_identifier)))))
    (variable
      (lower_identifier))))

==================
Pipeline and view associativity
==================

begin
  let forward = input |> first |> second that
  let backward = second <| first <| input that
  let first ~> second ~> result = input in
  result
end

---

(source_file
  (block_expression
    (context_binding
      (binding_kind)
      (general_binding
        (variable_pattern
          (lower_identifier))
        (forward_pipeline_expression
          (forward_pipeline_expression
            (variable
              (lower_identifier))
            (variable
              (lower_identifier)))
          (variable
            (lower_identifier))))
      (placement)
      (context_binding
        (binding_kind)
        (general_binding
          (variable_pattern
            (lower_identifier))
          (backward_pipeline_expression
            (variable
              (lower_identifier))
            (backward_pipeline_expression
              (variable
                (lower_identifier))
              (variable
                (lower_identifier)))))
        (placement)
        (context_binding
          (binding_kind)
          (general_binding
            (view_pattern
              (lower_identifier)
              (view_pattern
                (lower_identifier)
                (variable_pattern
                  (lower_identifier))))
            (variable
              (lower_identifier)))
          (placement)
          (variable
            (lower_identifier)))))))

==================
Value Pi
==================

val pi (A : VType) (value : A) . A

---

(source_file
  (value_pi_type
    (copattern
      (parenthesized_pattern
        (pattern_annotation
          (variable_pattern
            (upper_identifier))
          (variable
            (upper_identifier))))
      (parenthesized_pattern
        (pattern_annotation
          (variable_pattern
            (lower_identifier))
          (variable
            (upper_identifier)))))
    (variable
      (upper_identifier))))

==================
Definitions, binders, and matching
==================

begin
  def fix map (A : VType) (xs : List A) : Ret (List A) =
    match xs
    | +Nil () => ret +Nil ()
    | +Cons (x, tail) =>
      do rest <- ! map A tail;
      ret +Cons (x, rest)
    end
  that
  ! map
end

---

(source_file
  body: (block_expression
    body: (context_binding
      kind: (binding_kind)
      binding: (general_binding
        recursive: (recursion_modifier)
        binder: (variable_pattern
          name: (lower_identifier))
        parameters: (copattern
          (parenthesized_pattern
            (pattern_annotation
              pattern: (variable_pattern
                name: (upper_identifier))
              type: (variable
                name: (upper_identifier))))
          (parenthesized_pattern
            (pattern_annotation
              pattern: (variable_pattern
                name: (lower_identifier))
              type: (application_expression
                function: (variable
                  name: (upper_identifier))
                argument: (variable
                  name: (upper_identifier))))))
        classifier: (application_expression
          function: (variable
            name: (upper_identifier))
          argument: (parenthesized_term
            (application_expression
              function: (variable
                name: (upper_identifier))
              argument: (variable
                name: (upper_identifier)))))
        value: (match_expression
          scrutinee: (variable
            name: (lower_identifier))
          arm: (match_arm
            pattern: (constructor_pattern
              constructor: (constructor_identifier)
              argument: (parenthesized_pattern))
            body: (return_expression
              value: (constructor_expression
                constructor: (constructor_identifier)
                argument: (parenthesized_term))))
          arm: (match_arm
            pattern: (constructor_pattern
              constructor: (constructor_identifier)
              argument: (parenthesized_pattern
                (variable_pattern
                  name: (lower_identifier))
                (variable_pattern
                  name: (lower_identifier))))
            body: (do_expression
              binder: (variable_pattern
                name: (lower_identifier))
              value: (application_expression
                function: (application_expression
                  function: (force_expression
                    value: (variable
                      name: (lower_identifier)))
                  argument: (variable
                    name: (upper_identifier)))
                argument: (variable
                  name: (lower_identifier)))
              body: (return_expression
                value: (constructor_expression
                  constructor: (constructor_identifier)
                  argument: (parenthesized_term
                    (variable
                      name: (lower_identifier))
                    (variable
                      name: (lower_identifier)))))))))
      placement: (placement)
      body: (force_expression
        value: (variable
          name: (lower_identifier))))))

==================
Literal patterns
==================

begin
  do classified <-
    match n
    | 0 => ret 1
    | -7 => ret 2
    | +Tagged(42) => ret 3
    | (0, _) => ret 4
    | _ => ret 5
    end;
  let 5 = classified in ret classified
end

---

(source_file
  (block_expression
    (do_expression
      (variable_pattern
        (lower_identifier))
      (match_expression
        (variable
          (lower_identifier))
        (match_arm
          (integer_literal)
          (return_expression
            (integer_literal)))
        (match_arm
          (integer_literal)
          (return_expression
            (integer_literal)))
        (match_arm
          (constructor_pattern
            (constructor_identifier)
            (parenthesized_pattern
              (integer_literal)))
          (return_expression
            (integer_literal)))
        (match_arm
          (parenthesized_pattern
            (integer_literal)
            (hole_pattern))
          (return_expression
            (integer_literal)))
        (match_arm
          (hole_pattern)
          (return_expression
            (integer_literal))))
      (context_binding
        (binding_kind)
        (general_binding
          (integer_literal)
          (variable
            (lower_identifier)))
        (placement)
        (return_expression
          (variable
            (lower_identifier)))))))

==================
Named terms and existential parameters
==================

exists (Counter as Int : VType) (= State as Counter)
  (#Public = ((Hidden as Int) : VType)) .
  (#state = 0, #next :: Thk (State -> Ret State), = State)

---

(source_file
  body: (existential_type
    parameter: (existential_parameter
      binder: (variable_pattern
        name: (upper_identifier))
      definition: (variable
        name: (upper_identifier))
      classifier: (variable
        name: (upper_identifier)))
    parameter: (existential_parameter
      binder: (punned_pattern
        name: (upper_identifier))
      definition: (variable
        name: (upper_identifier)))
    parameter: (existential_parameter
      binder: (named_pattern
        name: (field_identifier)
        pattern: (parenthesized_pattern
          (pattern_annotation
            pattern: (manifest_pattern
              binder: (variable_pattern
                name: (upper_identifier))
              definition: (variable
                name: (upper_identifier)))
            type: (variable
              name: (upper_identifier))))))
    body: (parenthesized_term
      (named_term
        name: (field_identifier)
        value: (integer_literal))
      (labeled_term
        name: (field_identifier)
        value: (application_expression
          function: (variable
            name: (upper_identifier))
          argument: (parenthesized_term
            (function_type
              parameter: (variable
                name: (upper_identifier))
              result: (application_expression
                function: (variable
                  name: (upper_identifier))
                argument: (variable
                  name: (upper_identifier)))))))
      (punned_term
        name: (upper_identifier)))))

==================
Documented arbitrary terms
==================

--| API package
@[doc(section,"api")]
begin
  --| An example binding
  @[doc]
  let example = 1 that example
end

---

(source_file
  (documentation_comment)
  body: (metadata_expression
    metadata: (metadata
      value: (meta_application
        callee: (meta_identifier
          (lower_identifier))
        arguments: (meta_arguments
          (meta_identifier
            (lower_identifier))
          (string_literal))))
    body: (block_expression
      (documentation_comment)
      body: (metadata_expression
        metadata: (metadata
          value: (meta_identifier
            (lower_identifier)))
        body: (context_binding
          kind: (binding_kind)
          binding: (general_binding
            binder: (variable_pattern
              name: (lower_identifier))
            value: (integer_literal))
          placement: (placement)
          body: (variable
            name: (lower_identifier)))))))

==================
Pattern aliases and projections
==================

param ((/VType; /CType; /Thk; /Ret) : @[import("package.zy")] _) in _

---

(source_file
  body: (parameter_expression
    binder: (parenthesized_pattern
      (pattern_annotation
        pattern: (alias_pattern
          member: (punned_projection_pattern
            name: (upper_identifier))
          member: (punned_projection_pattern
            name: (upper_identifier))
          member: (punned_projection_pattern
            name: (upper_identifier))
          member: (punned_projection_pattern
            name: (upper_identifier)))
        type: (metadata_expression
          metadata: (metadata
            value: (meta_application
              callee: (meta_identifier
                (lower_identifier))
              arguments: (meta_arguments
                (string_literal))))
          body: (hole))))
    placement: (placement)
    body: (hole)))

==================
Annotated existential parameters
==================

exists @[builtin(reader)] (Reader : VType) . Reader

---

(source_file
  body: (existential_type
    parameter: (existential_parameter
      metadata: (metadata
        value: (meta_application
          callee: (meta_identifier
            (lower_identifier))
          arguments: (meta_arguments
            (meta_identifier
              (lower_identifier)))))
      binder: (pattern_annotation
        pattern: (variable_pattern
          name: (upper_identifier))
        type: (variable
          name: (upper_identifier))))
    body: (variable
      name: (upper_identifier))))

==================
Parenthesized metadata sugar
==================

@(import("library.zy"))

---

(source_file
  body: (metadata_expression
    metadata: (metadata_sugar
      value: (meta_application
        callee: (meta_identifier
          (lower_identifier))
        arguments: (meta_arguments
          (string_literal))))))

==================
Qualified metadata names
==================

@(import(std/data/test))

---

(source_file
  body: (metadata_expression
    metadata: (metadata_sugar
      value: (meta_application
        callee: (meta_identifier
          (lower_identifier))
        arguments: (meta_arguments
          (meta_identifier
            (lower_identifier)
            (keyword_identifier)
            (lower_identifier)))))))

==================
Package introduction
==================

pack (Representation as Int) where (42 : Representation) end

---

(source_file
  body: (pack_expression
    parameter: (pack_parameter
      parameter: (existential_parameter
        binder: (variable_pattern
          name: (upper_identifier))
        definition: (variable
          name: (upper_identifier))))
    component: (parenthesized_term
      (term_annotation
        term: (integer_literal)
        type: (variable
          name: (upper_identifier))))))

==================
Package introduction telescope
==================

let int_instance =
  pack (= Int as @(intrinsic(int)) : VType) where int_dictionary, end
in
int_instance / dictionary

---

(source_file
  body: (context_binding
    kind: (binding_kind)
    binding: (general_binding
      binder: (variable_pattern
        name: (lower_identifier))
      value: (pack_expression
        parameter: (pack_parameter
          parameter: (existential_parameter
            binder: (punned_pattern
              name: (upper_identifier))
            definition: (metadata_expression
              metadata: (metadata_sugar
                value: (meta_application
                  callee: (meta_identifier
                    (lower_identifier))
                  arguments: (meta_arguments
                    (meta_identifier
                      (lower_identifier))))))
            classifier: (variable
              name: (upper_identifier))))
        component: (variable
          name: (lower_identifier))))
    placement: (placement)
    body: (projection_expression
      value: (variable
        name: (lower_identifier))
      field: (lower_identifier))))

==================
Package introduction sealed evidence
==================

pack (B : VType) is Bool (#Counter = C : VType) is (List Bool) where 0, end

---

(source_file
  body: (pack_expression
    parameter: (pack_parameter
      parameter: (existential_parameter
        binder: (pattern_annotation
          pattern: (variable_pattern
            name: (upper_identifier))
          type: (variable
            name: (upper_identifier))))
      evidence: (variable
        name: (upper_identifier)))
    parameter: (pack_parameter
      parameter: (existential_parameter
        binder: (named_pattern
          name: (field_identifier)
          pattern: (pattern_annotation
            pattern: (variable_pattern
              name: (upper_identifier))
            type: (variable
              name: (upper_identifier)))))
      evidence: (parenthesized_term
        (application_expression
          function: (variable
            name: (upper_identifier))
          argument: (variable
            name: (upper_identifier)))))
    component: (integer_literal)))
